# doubt

./: README.md  example.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
doubt/: core.py
doubt/doubt/: __init__.py
