[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doubt"
version = "0.1.0"
description = "Discord webhook integration for logging and progress tracking"
readme = "README.md"
authors = [{ name = "Nico Roggendorff" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "tqdm>=4.60.0",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/nroggendorff/doubt"
